update c and u database
